--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,29 +1,20 @@
 body {
     background: black;
-    overflow-x: hidden;
+    position: relative;
 }
 
 section {
     background-color: white;
 }
 
-#particles-js {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: -1;
-}
 
-* {
-    z-index: 0;
-}
 
 
 #hero {
     width: 100%;
     height: 100vh;
-    margin-left: 20%;
-    padding-left: 2rem;
+    max-width: 100vw;
+    max-height: 100vh;
     background: transparent;
     background-size: cover;
 }
@@ -35,27 +26,25 @@ section {
     animation: typing 1s steps(30, end), blink-caret 0.75s step-end infinite;
 }
 
-#particles-js {
-    position: absolute;
-    width: 70%;
-    height: 100%;
-}
+
 
 #hero:before {
     content: "";
     background: rgba(5, 13, 24, 0.3);
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 0;
+ 
+    z-index: -1;
 }
 
 #hero .hero-container {
-    position: relative;
+    position: absolute;
+    display: flex;
     z-index: 2;
     min-width: 300px;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #hero h1 {
@@ -82,8 +71,8 @@ section {
 
 .scrollDown {
     position: absolute;
-    bottom: 0;
-    left: 50%;
+    top: 90vh;
+    left: 39%;
     text-align: center;
     color: rgba(255, 255, 255, 0.685);
 }
@@ -102,16 +91,14 @@ section {
 @media (min-width: 1024px) {
     #hero {
         background-attachment: fixed;
-        margin-left: 30%;
+    }
 
+    .scrollDown {
+        left: 50%;
     }
 }
 
 @media (max-width: 768px) {
-    #hero {
-        margin-left: 10%;
-    }
-
     #hero h1 {
         font-size: 28px;
         line-height: 36px;
@@ -125,10 +112,6 @@ section {
 }
 
 
-
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
 section {
     padding: 1rem 0;
     overflow: hidden;
@@ -182,3 +165,12 @@ section {
     font-weight: bolder;
     color: #1072A1;
 }
+
+
+
+/* ---- particles.js container ---- */
+#particles-js {
+    z-index: -1;
+
+}
+
